--- a/apps/templates2/index.html
+++ b/apps/templates2/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
-		{% block navbar %}{% endblock %}
+		{% include 'navbar.html' %}
 		<div class="container">
 			{% block body %}{% endblock %}
 		</div>
